--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -101,7 +101,7 @@ a {
         background-color: rgb(255, 255, 255);
         width: 100%;
         height: 100vh;
-        padding: 2rem 0;
+        padding: 2rem 1rem;
         z-index: 10;
         transition: .5s;
         overflow-y: auto;
@@ -129,7 +129,7 @@ a {
 
 .nav__link {
     color: black;
-    /* padding: 15px; */
+    padding: 10px;
     display: flex;
     width: 100%;
     font-size: 18px;
