--- a/src/responsive.css
+++ b/src/responsive.css
@@ -11,10 +11,34 @@
 
 @media (max-width: 767px){
 
+  .login {
+    width: 100%;
+  }
+  .register {
+    width: 100%;
+  }
+  .zone-list h4{
+    font-size: 18px;
+  }
+  .zone-list{
+    height: 100%;
+  }
+  .main-container{
+    margin: 10px 10px;
+  }
+  .inventory-popup-card{
+    height: 100%;
+    padding: 10px 10px;
+  }
+
+
 
 .banner-content{
   margin: 20px;
 
+}
+.footer-section p{
+  font-size: 14px;
 }
 
 .banner-content h1{
